--- a/.gitignore
+++ b/.gitignore
@@ -210,17 +210,9 @@ Desktop.ini
 # Recycle Bin used on file shares
 $RECYCLE.BIN/
 
-# Windows Installer files
-*.cab
-*.msi
-*.msm
-*.msp
-
-# Windows shortcuts
-*.lnk
-
 # Build logs
 *.tlog
 *.idb
 *.lastbuildstate
 *.exp
+*.ipdb
