* Refactored all FileStream modules * Have not refactored the filestream modules in Java and Python , those languages cannot work normal now

--- a/.gitignore
+++ b/.gitignore
@@ -219,3 +219,7 @@ $RECYCLE.BIN/
 /ArmyAntLib/CMakeFiles/ArmyAntLib.dir
 /ArmyAntLib/bin/*.so
 /ArmyAntLib/Makefile
+/ArmyAntLib/bin
+/ArmyAntLib/lib
+*.xdc
+*.iobj
